python/testData/inspections/PyUnhashableInspection/findHashArgument.py
bad_key = set()
print(hash(<error descr="Cannot hash 'set'">bad_key</error>))
